2005-10-26  Jonathan Pryor <jonpryor@vt.edu>

	* UnixEncoding.cs: Change EscapeByte to 0x0000, as suggested by Michal
	  Moskal.
	* UnixPath.cs: Remove '\0' from InvalidPathChars, since U+0000 is now used
	  as the path escape character for marshaling purposes.

2005-10-26  Jonathan Pryor <jonpryor@vt.edu>

	* UnixMarshal.cs: Obsolete heap-related methods to have a Heap suffix
	  (AllocHeap, FreeHeap, etc.), and change StringToAlloc() to be
	  StringToHeap().  This creates a stronger name association between related
	  methods.

2005-10-26  Jonathan Pryor <jonpryor@vt.edu>

	* UnixIOException.cs: Add (string) and (string, Exception) constructors to
	  silence FxCop; re-work logic so we lookup the error string at construction
	  time and use this as the message for the base class.

2005-10-25  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs, Syscall.cs: Filenames need to be marshaled through the 
	  FileNameMarshaler, which will encode/decode filenames with UnixEncoder.
	* UnixEncoding.cs: Added (copied from
	  ../../corlib/System.Text/UTF8Encoding.cs); a hack to permit handling of 
	  arbitrarily encoded filenames.  It attempts to decode a byte[] array as 
	  UTF-8, and if the decode fails it prefixes each byte with 
	  UnixEncoding.EscapeByte (\uFFFF).
	* UnixMarshal.cs: Use UnixEncoding as the default encoding, and special-case
	  UnixEncoding to use Stdlib.strlen() for native string lengths.

2005-10-21  Jonathan Pryor <jonpryor@vt.edu>

	* FileAccessPattern.cs: Added
	* UnixFile.cs, UnixStream.cs: Deprecate all the Advise* methods (lots!)
	  and replace with 6 methods which take a FileAccessPattern enum.

2005-10-19  Jonathan Pryor <jonpryor@vt.edu>

	* FileAccessPermissions.cs, FileSpecialAttributes.cs, FileTypes.cs: Added.
	* UnixFileSystemInfo.cs, UnixStream.cs: Replace the old Permission property
	  with 4 new properties: Protection (for the Native.FilePermissions value),
	  FileAccessPermissions (for rwxrwxrwx info), FileSpecialAttributes (for